--- a/css/styles.css
+++ b/css/styles.css
@@ -578,7 +578,7 @@ span.wave {
 }
 
 .github-calendar {
-	background: hsl(193, 38%, 59%);
+	background: #FFFFFF;
 	padding: 3em 7em;
 	color:#000000;
 	border: #00FFFF;
@@ -640,7 +640,7 @@ span.wave {
 	}
 	
 	.github-calendar {
-		background: hsl(193, 38%, 59%);
+		background: #FFFFFF;
 		padding: 3em 3em;
 		color:#000000;
 		border: #00FFFF;
@@ -702,7 +702,7 @@ span.wave {
 	}
 	
 	.github-calendar {
-		background: hsl(193, 38%, 59%);
+		background: #FFFFFF;
 		padding: 2em .2em;
 		color:#000000;
 		border: #00FFFF;
